--- a/app/src/main/res/layout/activity_karate.xml
+++ b/app/src/main/res/layout/activity_karate.xml
@@ -56,17 +56,17 @@
                 app:srcCompat="@drawable/logosmp">
 
                 <LinearLayout
-                    android:layout_width="118dp"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:layout_margin="16dp"
                     android:orientation="vertical">
 
-                    <ImageView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="133dp"
-                        app:srcCompat="@drawable/karate1" />
+                    <com.zolad.zoominimageview.ZoomInImageView
+                        android:layout_width="135dp"
+                        android:layout_height="130dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/karate1" />
 
 
                 </LinearLayout>
@@ -87,17 +87,17 @@
                 app:srcCompat="@drawable/logosmp">
 
                 <LinearLayout
-                    android:layout_width="118dp"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:layout_margin="16dp"
                     android:orientation="vertical">
 
-                    <ImageView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="133dp"
-                        app:srcCompat="@drawable/karate2" />
+                    <com.zolad.zoominimageview.ZoomInImageView
+                        android:layout_width="135dp"
+                        android:layout_height="130dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/karate2" />
 
 
                 </LinearLayout>
@@ -118,17 +118,17 @@
                 app:srcCompat="@drawable/logosmp">
 
                 <LinearLayout
-                    android:layout_width="118dp"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:layout_margin="16dp"
                     android:orientation="vertical">
 
-                    <ImageView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="133dp"
-                        app:srcCompat="@drawable/karate3" />
+                    <com.zolad.zoominimageview.ZoomInImageView
+                        android:layout_width="135dp"
+                        android:layout_height="130dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/karate3" />
 
 
                 </LinearLayout>
@@ -149,17 +149,17 @@
                 app:srcCompat="@drawable/logosmp">
 
                 <LinearLayout
-                    android:layout_width="118dp"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:layout_margin="16dp"
                     android:orientation="vertical">
 
-                    <ImageView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="133dp"
-                        app:srcCompat="@drawable/karate4" />
+                    <com.zolad.zoominimageview.ZoomInImageView
+                        android:layout_width="135dp"
+                        android:layout_height="130dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/karate4" />
 
 
                 </LinearLayout>
