--- a/app/src/main/res/layout/activity_pmr.xml
+++ b/app/src/main/res/layout/activity_pmr.xml
@@ -56,21 +56,21 @@
         app:cardElevation="8dp"
         app:srcCompat="@drawable/logosmp">
 
-        <LinearLayout
-            android:layout_width="118dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_margin="16dp"
-            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical">
 
-            <ImageView
+                <com.zolad.zoominimageview.ZoomInImageView
+                    android:layout_width="135dp"
+                    android:layout_height="130dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/pmr1" />
 
-                android:layout_width="match_parent"
-                android:layout_height="133dp"
-                app:srcCompat="@drawable/pmr1" />
 
-
-        </LinearLayout>
+            </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
@@ -87,17 +87,17 @@
             app:srcCompat="@drawable/logosmp">
 
             <LinearLayout
-                android:layout_width="118dp"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_margin="16dp"
                 android:orientation="vertical">
 
-                <ImageView
-
-                    android:layout_width="match_parent"
-                    android:layout_height="133dp"
-                    app:srcCompat="@drawable/pmr2" />
+                <com.zolad.zoominimageview.ZoomInImageView
+                    android:layout_width="135dp"
+                    android:layout_height="130dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/pmr2" />
 
 
             </LinearLayout>
@@ -117,17 +117,17 @@
             app:srcCompat="@drawable/logosmp">
 
             <LinearLayout
-                android:layout_width="118dp"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_margin="16dp"
                 android:orientation="vertical">
 
-                <ImageView
-
-                    android:layout_width="match_parent"
-                    android:layout_height="133dp"
-                    app:srcCompat="@drawable/pmr3" />
+                <com.zolad.zoominimageview.ZoomInImageView
+                    android:layout_width="135dp"
+                    android:layout_height="130dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/pmr3" />
 
 
             </LinearLayout>
@@ -147,17 +147,17 @@
             app:srcCompat="@drawable/logosmp">
 
             <LinearLayout
-                android:layout_width="118dp"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_margin="16dp"
                 android:orientation="vertical">
 
-                <ImageView
-
-                    android:layout_width="match_parent"
-                    android:layout_height="133dp"
-                    app:srcCompat="@drawable/pmr4" />
+                <com.zolad.zoominimageview.ZoomInImageView
+                    android:layout_width="135dp"
+                    android:layout_height="130dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/pmr4" />
 
 
             </LinearLayout>
