--- a/app/src/main/res/layout/activity_pramuka.xml
+++ b/app/src/main/res/layout/activity_pramuka.xml
@@ -56,17 +56,17 @@
              app:srcCompat="@drawable/logosmp">
 
              <LinearLayout
-                 android:layout_width="118dp"
+                 android:layout_width="130dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal|center_vertical"
                  android:layout_margin="16dp"
                  android:orientation="vertical">
 
-                 <ImageView
-
-                     android:layout_width="match_parent"
-                     android:layout_height="133dp"
-                     app:srcCompat="@drawable/pramuka" />
+                 <com.zolad.zoominimageview.ZoomInImageView
+                     android:layout_width="135dp"
+                     android:layout_height="130dp"
+                     android:scaleType="fitXY"
+                     android:src="@drawable/pramuka" />
 
 
              </LinearLayout>
@@ -86,17 +86,17 @@
              app:srcCompat="@drawable/logosmp">
 
              <LinearLayout
-                 android:layout_width="118dp"
+                 android:layout_width="130dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal|center_vertical"
                  android:layout_margin="16dp"
                  android:orientation="vertical">
 
-                 <ImageView
-
-                     android:layout_width="match_parent"
-                     android:layout_height="133dp"
-                     app:srcCompat="@drawable/pramuka2" />
+                 <com.zolad.zoominimageview.ZoomInImageView
+                     android:layout_width="135dp"
+                     android:layout_height="130dp"
+                     android:scaleType="fitXY"
+                     android:src="@drawable/pramuka2" />
 
 
              </LinearLayout>
@@ -116,17 +116,17 @@
              app:srcCompat="@drawable/logosmp">
 
              <LinearLayout
-                 android:layout_width="118dp"
+                 android:layout_width="130dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal|center_vertical"
                  android:layout_margin="16dp"
                  android:orientation="vertical">
 
-                 <ImageView
-
-                     android:layout_width="match_parent"
-                     android:layout_height="133dp"
-                     app:srcCompat="@drawable/pramuka3" />
+                 <com.zolad.zoominimageview.ZoomInImageView
+                     android:layout_width="135dp"
+                     android:layout_height="130dp"
+                     android:scaleType="fitXY"
+                     android:src="@drawable/pramuka3" />
 
 
              </LinearLayout>
@@ -146,17 +146,17 @@
              app:srcCompat="@drawable/logosmp">
 
              <LinearLayout
-                 android:layout_width="118dp"
+                 android:layout_width="130dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal|center_vertical"
                  android:layout_margin="16dp"
                  android:orientation="vertical">
 
-                 <ImageView
-
-                     android:layout_width="match_parent"
-                     android:layout_height="133dp"
-                     app:srcCompat="@drawable/pramuka4" />
+                 <com.zolad.zoominimageview.ZoomInImageView
+                     android:layout_width="135dp"
+                     android:layout_height="130dp"
+                     android:scaleType="fitXY"
+                     android:src="@drawable/pramuka4" />
 
 
              </LinearLayout>
